<resources>
    <string name="app_name">About Me</string>
    <string name="name_txt">Sheikh Riyadh</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="btn_txt">Click</string>
    <string name="description">Hello..! \n My name is sheikh riyadh form bangladesh now i am study government graphics arts institute and i am a android apps developer..My name is sheikh riyadh form bangladesh now i am study government graphics arts institute and i am a android apps developer..My name is sheikh riyadh form bangladesh now i am study government graphics arts institute and i am a android apps developer..My name is sheikh riyadh form bangladesh now i am study government graphics arts institute and i am a android apps developer..My name is sheikh riyadh form bangladesh now i am study government graphics arts institute and i am a android apps developer..My name is sheikh riyadh form bangladesh now i am study government graphics arts institute and i am a android apps developer..My name is sheikh riyadh form bangladesh now i am study government graphics arts institute and i am a android apps developer..
    </string>
</resources>
