<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txt_name_Id"
        style="@style/txt_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/name_txt" />

    <ImageView
        android:id="@+id/star_image_Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/yellow_star"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <EditText
        android:id="@+id/edit_Txt_name_Id"
        style="@style/txt_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_nickname"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_Id"
        style="@style/txt_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_txt"/>

    <TextView
        android:id="@+id/nicknameTxtID"
        style="@style/txt_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <ScrollView
        android:id="@+id/bio_scroll_Id"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/txt_padding_start"
                android:paddingLeft="@dimen/txt_padding_left"
                android:text="@string/description"
                android:textSize="@dimen/txt_size"
                tools:ignore="RtlCompat,RtlSymmetry" />

    </ScrollView>
    </LinearLayout>
</layout>
